ALL raw figure finished

--- a/Code/Quadratic_Spoiling/ImageProcessing/ReportFigures.ipynb
+++ b/Code/Quadratic_Spoiling/ImageProcessing/ReportFigures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "id": "155ab825-75e1-4ea4-bb6d-cbb0fba6621e",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "65211f78-8c3f-4dd2-a7b1-e18827b64297",
    "metadata": {},
    "outputs": [
@@ -534,13 +534,14 @@
     "    DICOM = 'recon/multiecho_FLASH/tr'+str(tr)+'_fa'+str(fa)+'_echo'+str(i)+'.dcm'\n",
     "    img = pydicom.read_file(DICOM)\n",
     "    GOLDSTD_DATA = img.pixel_array.reshape((256,256))\n",
+    "\n",
     "    \n",
     "    plt.figure(i,figsize=(10,10))\n",
     "    plt.imshow(GOLDSTD_DATA,'gray')\n",
     "    plt.title(\"Echo \"+str(i), fontsize = 20)\n",
     "    plt.gca().set_xticks([])\n",
     "    plt.gca().set_yticks([])\n",
-    "    plt.savefig(\"Figure9_GOLDSTDecho\"+str(i)+\".jpg\")\n"
+    "    #plt.savefig(\"Figure9_GOLDSTDecho\"+str(i)+\".jpg\")\n"
    ]
   },
   {
